--- a/packages/playground/index.html
+++ b/packages/playground/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div id="header">Guard UI playground</div>
+    <div id="header">Guard UI playground dddcc</div>
     <div id="root">
         <div id="editorContainer">
             <div class="editorTitle">UI</div>
